samples/_failures_safe/1761423340_5058de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28ddb2f0.c: In function ‘main’:
./samples/SAFE/__tmp_28ddb2f0.c:151:11: error: expected ‘;’ at end of input
  151 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_28ddb2f0.c:151:5: error: expected declaration or statement at end of input
  151 |     printf
      |     ^~~~~~
